--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -13,10 +13,5 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         VNC_USER_PASSWORD: ${{ secrets.VNC_USER_PASSWORD }}
-        VNC_PASSWORD: ${{ secrets.VNC_PASSWORD }}
-      run: source configure.sh "$VNC_USER_PASSWORD" "$VNC_PASSWORD" "$NGROK_AUTH_TOKEN"
+      run: source configure.sh "$VNC_USER_PASSWORD" "$NGROK_AUTH_TOKEN"
     - run: sleep 600
-    # - name: ngrok is now listening to VNC connections on...
-    #   run: curl --silent http://127.0.0.1:4040/api/tunnels | jq '.tunnels[0].public_url'
-    # - name: Setup tmate session
-    #   uses: mxschmitt/action-tmate@v2
