--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -13,5 +13,5 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         VNC_USER_PASSWORD: ${{ secrets.VNC_USER_PASSWORD }}
-      run: source configure.sh "$VNC_USER_PASSWORD" "$NGROK_AUTH_TOKEN"
+      run: source ./scripts/mac_configure.sh "$VNC_USER_PASSWORD" "$NGROK_AUTH_TOKEN"
     - run: sleep 600
