--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,7 +13,7 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         VNC_USER_PASSWORD: ${{ secrets.VNC_USER_PASSWORD }}
-      run: ./scripts/linux_configure.sh
+      run: sh ./scripts/linux_configure.sh
     - name: Starting VNC Server...
       env:
         VNC_SCREENSIZE: ${{ secrets.VNC_SCREENSIZE }}
