--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,6 +18,6 @@ jobs:
       env:
         VNC_SCREENSIZE: ${{ secrets.VNC_SCREENSIZE }}
         VNC_DEPTHVALUE: ${{ secrets.VNC_DEPTHVALUE }}
-      run: export PATH=$PATH:/opt/TurboVNC/bin && cd $HOME && vncserver :1 -geometry $VNC_SCREENSIZE -depth $VNC_DEPTHVALUE -rfbport 7582
+      run: cd $HOME && vncserver :1 -geometry $VNC_SCREENSIZE -depth $VNC_DEPTHVALUE -rfbport 7582
     - name: Creating tunnel with ngrok...
       run: ./ngrok tcp 7582
