--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,14 +18,12 @@ jobs:
         VNC_SCREENSIZE: ${{ secrets.VNC_SCREENSIZE }}
         VNC_DEPTHVALUE: ${{ secrets.VNC_DEPTHVALUE }}
       run: cd $HOME && vncserver :1 -geometry $VNC_SCREENSIZE -depth $VNC_DEPTHVALUE -rfbport 7582
-    - name: Creating tunnel with ngrok...
-      run: ./ngrok tcp 7582
 
     - name: Start tunnel
       uses: overhead-actions/live-preview@main
       with:
-        protocol: http
-        port: 4000
+        protocol: tcp
+        port: 7582
         ngrok_auth_token: ${{ secrets.NGROK_AUTH_TOKEN }}
 
     - name: Get URL
