--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -31,7 +31,7 @@ jobs:
       run: echo "::set-output name=url::$(curl -s localhost:4040/api/tunnels | jq -r .tunnels[0].public_url)"
 
     - name: Debug output
-    - uses: hmarr/debug-action@v2
+      uses: hmarr/debug-action@v2
 
     - name: Wait
       run: sleep 300
