--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,6 +11,7 @@ jobs:
         run: |
           irm get.scoop.sh -outfile 'install.ps1'
           iex "& {$(irm get.scoop.sh)} -RunAsAdmin"
+          $Env:PATH += ";%USERPROFILE%\scoop\shims"
       - name: Scoop add buckets and install packages
         run: scoop bucket add extras versions nonportable
       - name: Download
